--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
-        <link rel="stylesheet" href="style.css" />
-        <title>Frontend Mentor | Intro section with dropdown navigation</title>
+        <link rel="stylesheet" href="./style.css" />
+        <title>Intro section with dropdown navigation</title>
     </head>
     <body>
         <header>
